Removed background to message section, added some section styling, fixed jump-to from nav-bar, added some pics

--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,11 @@ body{
     align-items: center;
     overflow: auto;
     overflow-x: hidden;
-    box-sizing: border-box;
     font-family: Roboto;
+}
+
+* {
+    box-sizing: border-box
 }
 
 p{ 
@@ -16,16 +19,27 @@ p{
 }
 
 .background-section{
-    height: 50vh;
+    height: 100vh;
     width: 100vw;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-size: cover;
+    background-position-y: 25%;
+}
+
+.background-layer{
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    border-top: 10px dotted #160C28;
+    border-bottom: 10px dotted #160C28;
 }
 
 .background-section:nth-child(even){
-    background-color: #CED0CE;
+    background-color: #E6E8E6;
+    /* background-color: #CED0CE; */
 }
 
 .background-section:nth-child(odd){
@@ -36,25 +50,29 @@ p{
     height: 100vh;
 }
 
-.background-section:last-of-type{
-    height: 50vh;
-}
-
 #background-section-1{
     background-image: url(/content/images/carrying-cheerful.jpg);
-    background-size: cover;
-    background-position-y: 25%;
+}
+#background-section-3{
+    background-image: url(/content/images/colleagues-friends-group.jpg);
 }
 
-.background-layer{
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
+#background-section-4{
+    height: calc(100vh - 10px);
+}
+
+#background-section-4 .background-layer{
+    border-bottom: none;
+    height: calc(100vh - 10px);
+}
+
+.background-section:last-of-type{
+    border-bottom: none;
 }
 
 #header{
     width: 100vw;
-    height: 7vh;
+    height: 50px;
     position: fixed;
     padding-right: 20px;
     background-color: #160C28;
@@ -79,28 +97,51 @@ p{
 }
 
 #message-container{
-    width: 60%;
+    width: 100%;
     min-width: 200px;
-    height: 60%;
+    height: 100%;
     position: absolute;
-    top: 20vh;
-    left: 20vw;
-    background-color: #E6E8E6;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.23);
+    /* top: 20vh; */
+    /* left: 20vw; */
+    /* background-color: #E6E8E6; */
+    /* box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.23); */
     box-sizing: border-box;
     padding: 5vw;
-}
-
-#message-body{
-    text-indent: 10%;
-}
-
-.message-salutation{
-    text-indent: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .message{
-    font-size:calc(100vw/100vh);
+    width: 50%;
+    color: black;
+    -webkit-text-stroke: 1px black;
+    text-align: left;
+}
+
+#message-greeting-container{
+    width: 100vw;
+    height: 10vh;
+}
+
+#message-greeting{
+    text-indent: 25%;
+}
+
+#message-body{
+    height: 30vh;
+    text-indent: 5%;
+}
+
+#message-salutation-container{
+    width: 100vw;
+    height: 10vh;
+}
+
+.message-salutation{
+    text-indent: 50%;
+    margin-top: 0;
 }
 
 .message:first-of-type{
@@ -116,7 +157,7 @@ p{
 }
 
 #message-salutation-line-two{
-    text-indent: calc(60% + 20px);
+    text-indent: calc(50% + 20px);
 }
 
 .section{
@@ -128,7 +169,6 @@ p{
     left: 0;
     background-color: transparent;
     text-align: center;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.23);
     box-sizing: border-box;
 }
 
@@ -142,11 +182,24 @@ p{
 
 #contact-section{
     top: 300vh;
+    height: calc(100vh - 10px);
 }
 
 .section-anchor{
     display: block;
     position: relative;
-    top: -7vh;
-    padding-top: 7vh;
+    top: -60px;
+    padding-top: 60px;
+}
+
+@media only screen and (max-device-width : 1024px) {
+    .message{
+        font-size: 3em !important;
+        width: 70vw;
+        max-width: 800px;
+    }
+
+    #header{
+        height: 100px;
+    }
 }
